Get_post implemented

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server =LAPTOP-6HHS2QDT\\SQLEXPRESS; Database=Software_Download_System; Trusted_Connection=True; MultipleActiveResultSets=True;"
+  }
 }
